# SDFR

./: .gitignore  GITHUB_ACTIONS_SETUP.md
.github/workflows/: build-sdf-r-v15-9-8-1-cross-platform.yml
Rust-GPU-SDF-V15.9.7.1/: Cargo.toml  agent-work-log.json  build_sdf_addon.ps1
Rust-GPU-SDF-V15.9.7.1/rust_gpu_sdf_addon/: __init__.py  constants.py  engine.py  handlers.py  operators.py  properties.py  shader.py  ui.py
Rust-GPU-SDF-V15.9.7.1/scratch/: check_log.py  fix_gpu.py  gen.py  gen2.py  gen_wgsl.py  git_commit.py  git_test.py  rust_helpers.txt  update_log.py  update_log10.py  update_log11.py  update_log12.py  update_log2.py  update_log3.py  update_log4.py  update_log5.py  update_log6.py  update_log7.py  update_log8.py  update_log9.py  update_ui.py  wgsl_helpers.txt
Rust-GPU-SDF-V15.9.7.1/src/: bvh.rs  common.wgsl  detect.wgsl  gpu.rs  lib.rs  marching_cubes.wgsl  math.rs  sdf.rs  test_wgsl.rs
Rust-GPU-SDF-V15.9.8.1_LINUX/: COLLABORATOR_BUILD.md  Cargo.toml  build_sdf_addon.ps1  build_sdf_addon.sh
Rust-GPU-SDF-V15.9.8.1_LINUX/rust_gpu_sdf_addon/: constants.py  handlers.py  operators.py  properties.py  ui.py
Rust-GPU-SDF-V15.9.8.1_LINUX/src/: gpu_utils.rs  lib.rs  noise.rs  sdf.rs  sdf_fix_segment.txt  tables.rs  test_switch.wgsl
Rust-GPU-SDF-V15.9.8.1_MAC/: COLLABORATOR_BUILD.md  README.md  build_sdf_addon.sh
Rust-GPU-SDF-V15.9.8.1_MAC/rust_gpu_sdf_addon/: __init__.py  _native.py  engine.py  engine_fix_temp.py  shader.py
Rust-GPU-SDF-V15.9.8.1_MAC/src/: bin_test_wgsl.rs  common.wgsl  dc.rs  detect.wgsl  dual_contouring.wgsl  gpu_table_gen.rs  (+3 more)
