[package]
name = "rust_gpu_sdf"
version = "0.5.0"
edition = "2021"

[lib]
name = "rust_gpu_sdf"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py311"] }
wgpu = "23.0"
pollster = "0.3"
bytemuck = { version = "1.2.0", features = ["derive"] }
nalgebra = "0.33" # ベクトル演算用
futures-intrusive = "0.5"
futures = "0.3"
once_cell = "1.18"
rayon = "1.8"
naga = { version = "23.1", features = ["wgsl-in"] }

[build-dependencies]
pyo3-build-config = "0.23"

[[bin]]
name = "test_wgsl2"
path = "src/bin_test_wgsl.rs"
